fixed: style.css .title word wrap

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -41,11 +41,15 @@ a {
 
 
 .title {
-    margin: 3rem;
+    width: -moz-fit-content;
+    width: fit-content;
+    margin: 3rem auto 3rem auto;
     color: #000000;
     text-align: center;
-    font-size: 3rem;
-    padding: 0.25em;
+    font-size: 2.5rem;
+    padding: 0.25rem 2rem 0.25rem 2rem;
+    text-align: center;
+    justify-content: center;
     border-top: solid 2px #6cb4e4;
     border-bottom: solid 2px #6cb4e4;
     /* background: -webkit-repeating-linear-gradient(-45deg, #f0f8ff, #f0f8ff 3px,#e9f4ff 3px, #e9f4ff 7px); */
